--- a/test/pom.xml
+++ b/test/pom.xml
@@ -3,4 +3,11 @@
   <groupId>test.quartz</groupId>
   <artifactId>test</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.quartz-scheduler</groupId>
+  		<artifactId>quartz</artifactId>
+  		<version>2.1.3</version>
+  	</dependency>
+  </dependencies>
 </project>
